--- a/Javascript/package.json
+++ b/Javascript/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "APIGraphQL con Nodejs, Express, GraphQL, Reactjs ",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Eric-Andrade/MyGraphQL"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js --exec babel-node",
