--- a/Javascript/package.json
+++ b/Javascript/package.json
@@ -22,12 +22,12 @@
     "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "express-graphql": "^0.6.7",
-    "favicon": "^0.0.2",
     "graphql": "^0.10.5",
     "json-server": "^0.12.0",
     "lodash": "^4.17.4",
     "mongoose": "^4.11.7",
     "mysql2": "^1.4.0",
-    "sequelize": "^4.5.0"
+    "sequelize": "^4.5.0",
+    "serve-favicon": "^2.4.3"
   }
 }
